[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-share-mount"
version = "0.2.0"
description = "Cross-platform remote directory sharing and mounting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.gui-scripts]
remote-share-mount = "remote_share.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["remote_share*"]
